# Symmetricity

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TransformationMatrix.cpp  TransformationMatrix.hpp  agony.cpp  agony.hpp  designation_menu.cpp  designation_menu.hpp  main.cpp  pathfinder.cpp  pathfinder.hpp  ppm.hpp  utility.hpp
